Added schedule history pages and such

--- a/view/resources/css/app.css
+++ b/view/resources/css/app.css
@@ -7,6 +7,10 @@ body {
   background-size: cover;
 }
 
+a.underline:hover, a.underline:focus {
+  text-decoration: underline;
+}
+
 hr {
   width: 90%;
   display: block;
@@ -379,4 +383,38 @@ input[type="search"].search-large {
 
 .card .card-title {
   font-weight: bold;
+}
+
+/* Course Cart Calendar Styles */
+
+#calendar thead {
+   background-color: #62A989;
+   font-size: 2rem;
+}
+
+#calendar thead th {
+   padding: 10px;
+   color: white;
+}
+
+#calendar tbody tr td {
+  padding: 10px;
+  text-align: center;
+}
+
+/* Settings Styles */
+
+#settings {
+  font-size: 1.75rem;
+  margin-bottom: 20px;
+}
+
+#settings td {
+  padding: 10px 0px;
+  border-top: 1px solid #d0d0d0;
+  border-bottom: 1px solid #d0d0d0;
+}
+
+#settings tr:hover {
+  background-color: #f4f4f4;
 }
