Added delete from cart functionality with undo option. Pulled cart infomation from array.

--- a/view/resources/css/app.css
+++ b/view/resources/css/app.css
@@ -402,6 +402,10 @@ input[type="search"].search-large {
   text-align: center;
 }
 
+.delete {
+  color: #f04124;
+}
+
 /* Settings Styles */
 
 #settingsTable {
