Integrated user history functionality. Validated that same CRN is not written to enrollment table twice. Added links in course cart to view course details.

--- a/view/resources/css/app.css
+++ b/view/resources/css/app.css
@@ -7,6 +7,10 @@ body {
   background-size: cover;
 }
 
+a.white {
+  color: white;
+}
+
 a.underline:hover, a.underline:focus {
   text-decoration: underline;
 }
