--- a/view/resources/css/app.css
+++ b/view/resources/css/app.css
@@ -435,4 +435,21 @@ input[type="search"].search-large {
 
 #settingsTable tr:hover {
   background-color: #f4f4f4;
+  cursor: pointer;
+}
+
+#accountsTable {
+  font-size: 1.25rem;
+  margin-bottom: 20px;
+}
+
+#accountsTable td {
+  padding: 10px;
+  border-top: 1px solid #d0d0d0;
+  border-bottom: 1px solid #d0d0d0;
+}
+
+#accountsTable tr:hover {
+  background-color: #f4f4f4;
+  cursor: pointer;
 }
